kubernetes/cluster-0/apps/flux-system/add-ons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.hsn.dev
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "flux-receiver-${CLUSTER_NAME}.hsn.dev"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
